<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appzoro.BP_n_ME.activity.SigninActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarThumbVertical="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/logo_bp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/Enter_Username_Password"
                android:textColor="#f78e17"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/patient"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/patient"
                    android:layout_weight="1"
                    android:text="@string/Patient"
                    android:textColor="#fff"
                    app:buttonTint="#fff" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/doctor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/pharmacist"
                    android:text="@string/pharmacist"
                    android:textColor="#fff"
                    app:buttonTint="#fff" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/username_border"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_person_gray"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="7dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/password_border"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="7dp"
                    android:textSize="14sp" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/ch_showpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Show_Password"
                    android:textColor="#fff"
                    android:textSize="13sp"
                    app:buttonTint="#fff" />

                <TextView
                    android:id="@+id/tv_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_border_orange"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/Sign_In"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>