<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin_background"
    android:orientation="vertical"
    tools:context="com.appzoro.BP_n_ME.activity.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarThumbVertical="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/logo_bp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/Patient_Registration"
                android:textColor="#f78e17"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/userLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/username"
                    android:maxLines="1"
                    android:padding="13dp"
                    android:textSize="14sp"
                    android:background="@drawable/edittext_border" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:inputType="textPassword"
                    android:hint="@string/Password"
                    android:maxLines="1"
                    android:padding="13dp"
                    android:textSize="14sp"
                    android:background="@drawable/edittext_border" />

                <EditText
                    android:id="@+id/et_cnfpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:inputType="textPassword"
                    android:hint="@string/Confirm_Password"
                    android:maxLines="1"
                    android:padding="13dp"
                    android:textSize="14sp"
                    android:background="@drawable/edittext_border" />

                <EditText
                    android:id="@+id/et_dischargedate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/Enrollment_Date"
                    android:inputType="date"
                    android:maxLines="1"
                    android:padding="13dp"
                    android:textSize="14sp"
                    android:clickable="true"
                    android:focusable="false"
                    android:editable="false"
                    android:background="@drawable/edittext_border" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" >

                    <Spinner
                        android:id="@+id/et_clinicName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="12dp"
                        android:paddingStart="6dp"
                        android:paddingTop="12dp"
                        android:spinnerMode="dropdown"
                        android:background="@drawable/edittext_border" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_arrow_drop_down" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/et_pharmacyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:inputType="textCapWords"
                    android:hint="@string/Pharmacy_Name"
                    android:maxLines="1"
                    android:padding="13dp"
                    android:textSize="14sp"
                    android:background="@drawable/edittext_border"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ " />

                <EditText
                    android:id="@+id/et_pharmacyNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/Pharmacy_Phone_Number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="13dp"
                    android:textSize="14sp"
                    android:background="@drawable/edittext_border" />

                <EditText
                    android:id="@+id/et_physicianName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:inputType="textCapWords"
                    android:hint="@string/Pharmacist_Name"
                    android:maxLines="1"
                    android:padding="13dp"
                    android:textSize="14sp"
                    android:background="@drawable/edittext_border" />

                <EditText
                    android:id="@+id/et_physicianNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/Pharmacist_Phone_Number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="13dp"
                    android:textSize="14sp"
                    android:background="@drawable/edittext_border" />

                <TextView
                    android:id="@+id/tv_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:text="@string/submit"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_border_orange" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>